--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
 <h2><span i18n>Data Table</span></h2>
 <div class="example-container mat-elevation-z8">
   <div class="example-header">
-    <md-input-container floatPlaceholder="never">
+    <md-form-field floatPlaceholder="never">
       <input mdInput #filter placeholder="Filter users">
-    </md-input-container>
+    </md-form-field>
   </div>
 
   <md-table #table [dataSource]="dataSource" mdSort>
@@ -19,31 +19,31 @@
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- ID Column -->
-    <ng-container cdkColumnDef="userId">
-      <md-header-cell *cdkHeaderCellDef md-sort-header> ID </md-header-cell>
-      <md-cell *cdkCellDef="let row"> {{row.id}} </md-cell>
+    <ng-container mdColumnDef="userId">
+      <md-header-cell *mdHeaderCellDef md-sort-header> ID </md-header-cell>
+      <md-cell *mdCellDef="let row"> {{row.id}} </md-cell>
     </ng-container>
 
     <!-- Progress Column -->
-    <ng-container cdkColumnDef="progress">
-      <md-header-cell *cdkHeaderCellDef md-sort-header> Progress </md-header-cell>
-      <md-cell *cdkCellDef="let row"> {{row.progress}}% </md-cell>
+    <ng-container mdColumnDef="progress">
+      <md-header-cell *mdHeaderCellDef md-sort-header> Progress </md-header-cell>
+      <md-cell *mdCellDef="let row"> {{row.progress}}% </md-cell>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container cdkColumnDef="userName">
-      <md-header-cell *cdkHeaderCellDef md-sort-header> Name </md-header-cell>
-      <md-cell *cdkCellDef="let row"> {{row.name}} </md-cell>
+    <ng-container mdColumnDef="userName">
+      <md-header-cell *mdHeaderCellDef md-sort-header> Name </md-header-cell>
+      <md-cell *mdCellDef="let row"> {{row.name}} </md-cell>
     </ng-container>
 
     <!-- Color Column -->
-    <ng-container cdkColumnDef="color">
-      <md-header-cell *cdkHeaderCellDef md-sort-header> Color </md-header-cell>
-      <md-cell *cdkCellDef="let row" [style.color]="row.color"> {{row.color}} </md-cell>
+    <ng-container mdColumnDef="color">
+      <md-header-cell *mdHeaderCellDef md-sort-header> Color </md-header-cell>
+      <md-cell *mdCellDef="let row" [style.color]="row.color"> {{row.color}} </md-cell>
     </ng-container>
 
-    <md-header-row *cdkHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row *cdkRowDef="let row; columns: displayedColumns;"></md-row>
+    <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
+    <md-row *mdRowDef="let row; columns: displayedColumns;"></md-row>
   </md-table>
   <md-paginator #paginator
                 [length]="exampleDatabase.data.length"
