Update Libs + Fontawesome 5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     Welcome to {{ title }}!! <i class="flag flag-icon flag-icon-de "></i>
   </h1>
 </div>
-<h2><span i18n>Data Table</span></h2>
+<h2><span i18n>Data Table <i class="fas fa-table"></i></span></h2>
 <div class="example-container mat-elevation-z8">
   <div class="example-header">
     <mat-form-field floatPlaceholder="never">
