--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 // Import Font Awesome
-$fa-font-path: "~font-awesome/fonts";
-@import '~font-awesome/scss/font-awesome';
+$fa-font-path: "../node_modules/@fortawesome/fontawesome-free-webfonts/webfonts";
+@import "../node_modules/@fortawesome/fontawesome-free-webfonts/scss/fontawesome.scss";
+@import "../node_modules/@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss";
 
 // Import Flag Icons
 $flag-icon-css-path: '~flag-icon-css/flags';
