Update Libs + Reintegration of Covalent & Clarity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,10 @@
 <div class="text-center">
     <h1>
         <ng-container i18n="@@WelcomeTitle"> Welcome to {{ title }}!!</ng-container>
-        <i class="flag flag-icon flag-icon-de"></i>
     </h1>
 </div>
 <h2>
-    <span i18n="@@DataTable">Data Table <i class="fas fa-table"></i></span>
+    <span i18n="@@DataTable">Data Table <i class="fas fa-table"></i><span class="flag-icon flag-icon-de"></span></span>
 </h2>
 <div class="example-container mat-elevation-z8">
     <div class="example-header">
