--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,8 +14,7 @@ $flag-icon-css-path: "~flag-icon-css/flags";
 // Import Material Theme
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@angular/material/theming";
-// TODO Fix Covalent Theme;
-// @import "~@covalent/core/theming/all-theme";
+@import "~@covalent/core/theming/all-theme";
 
 @include mat-core();
 
@@ -27,4 +26,4 @@ $warn: mat-palette($mat-red, 600);
 $theme: mat-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
-// @include covalent-theme($theme);
+@include covalent-theme($theme);
