--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
             >
                 <mat-icon class="float-right text-white mr-1" style="font-size: 1.25rem">remove</mat-icon>
                 <mat-card-content>
-                    <h5 class="text-white text-nowrap overflow-hidden text-truncate" matTooltip="{{ card.title }}">
+                    <h5 class="text-white text-truncate" matTooltip="{{ card.title }}">
                         {{ card.title }}
                     </h5>
                 </mat-card-content>
