--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <form class="d-flex justify-content-center align-content-center mt-3">
     <mat-form-field class="pr-3">
-        <input matInput placeholder="Max cols" #maxColsIn (change)="updateCols(maxColsIn.value)" />
+        <input matInput placeholder="Spalten" #maxColsIn value="{{ cols }}" (change)="updateCols(maxColsIn.value)" />
     </mat-form-field>
 
     <mat-form-field>
-        <input matInput placeholder="Max card rows" #cardMaxRowsIn (change)="updateCardMaxRows(cardMaxRowsIn.value)" />
+        <input
+            matInput
+            placeholder="Reihen"
+            #cardMaxRowsIn
+            value="{{ cardMaxRows }}"
+            (change)="updateCardMaxRows(cardMaxRowsIn.value)"
+        />
     </mat-form-field>
 </form>
 
